src/scss/02-pages/_home.scss
.notebook {
  width: var(--max-width);

  &__title {
    font-size: 1.5rem;
    font-weight: map-get($fonts, fw-semi-bold);
    line-height: 2rem;
    color: var(--brand-01);
    height: 32px;
    text-align: center;
    margin: 0;
    margin-bottom: var(--space-xs);
  }
}

.notes {
  width: var(--max-width);
  margin-top: 1.5rem;

  &__title {
    font-size: 1.5rem;
    font-weight: map-get($fonts, fw-semi-bold);
    line-height: 2rem;
    color: var(--brand-01);
    text-align: center;
    height: 36px;
    margin: 0;
    margin-bottom: var(--space-xxs);
  }

  &__list {
    list-style: none;
    margin: 0;
    padding: 0;
    width: 100%;
    min-height: 328px;

    position: relative;
  }

  &__item {
    box-shadow: var(--elevation-03);
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
    background: var(--ui-01);

    &--active {
      z-index: 5;
    }
  }

  &__content {
    margin: var(--space-xs);
    min-height: 240px;
  }
}

